--- a/research.html
+++ b/research.html
@@ -573,7 +573,7 @@
             <br>
 
             <p class="weekend-content__card-text">
-              MARCH 2022
+              MARCH, 2022
             </p>
             <a target="_blank"
               href="./assets/resources/market notes- market notes Higher Volatility, More Stability 120322.pdf."
